# SvelteReader

./: .gitignore  .gitmodules  README.md  mkdocs.yml
agent/: .env.example  README.md  langgraph.json  pyproject.toml
agent-examples/old-deepresearch/: __init__.py  state.py  tools.py
agent-examples/socratic/: __init__.py
agent-examples/socratic/deepresearch/: __init__.py  behaviour.py  graph.py  prompts.py  state.py  tools.py
agent-examples/socratic/deeptutor/: __init__.py  graph.py  state.py
agent-examples/socratic/middleware/: __init__.py  clarify.py  client_tools.py  payment.py  thinking.py  validation.py  websearch.py
agent/logs/: .gitkeep
agent/scripts/: debug_agent.py
agent/src/agent/: __init__.py  graph.py
agent/src/deepresearch/: __init__.py  configuration.py  graph.py  prompts.py  state.py  tools.py
agent/src/shared/: __init__.py  models.py  state.py
agent/src/web_agent/: __init__.py  graph.py  prompts.py  tools.py
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/searxng/: limiter.toml  settings.yml
backend/src/: __init__.py  main.py
backend/src/routers/: __init__.py  chat.py  ocr.py  search.py  suggestions.py
backend/src/services/: __init__.py  langgraph_client.py  ocr.py  search.py  wallet.py
backend/wallet_db/wallet/: sveltereader.sqlite3
docs/: agent-rag-architecture.md  agent.md  ai-chat-integration.md  annotation-sync-design.md  architecture.md  book-sync-design.md  chat-refactor.md  deployment.md  design-decisions.md  ecash-payment-flow.md  features.md  index.md  refactoring.md  roadmap.md  setup.md  testing.md
docs/core-design/: agent-design.md  architecture.md  modes.md
docs/core-design/pleb-graph/: source_and_claim_design.md
docs/development/: architecture.md  setup.md  testing.md
docs/features/: annotation-sync-design.md  library-management.md  spectating.md
docs/modes/reader/: ai-chat-integration.md  ebook-reader.md  spectating.md
docs/web-scrape/: web-scrape.md
frontend/: .env.example  .gitignore  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: library.test.ts  reader.test.ts
frontend/e2e/fixtures/: .gitkeep
frontend/src/: app.css
frontend/src/lib/: icons.ts  index.ts  templates.ts
frontend/src/lib/codemirror/: index.ts  livePreview.ts
frontend/src/lib/components/: BookAnnouncementModal.svelte  BookCard.svelte  ImportButton.svelte  ModeSelector.svelte  SpectateButton.svelte  TopBar.svelte
frontend/src/lib/services/: agentToolsService.ts  chatService.ts  deepresearch-langgraph.ts  discoveryService.svelte.ts  epubService.ts  langgraph.ts  nostrService.ts  ocrService.ts  pdfService.ts  storageService.ts  synthesizeDb.ts  vectorService.ts  webSearchService.ts
frontend/src/lib/stores/: agents.svelte.ts  annotations.svelte.ts  annotations.ts  apiKeys.svelte.ts  books.svelte.ts  books.test.ts  books.ts  chat.svelte.ts  deepResearchHistory.svelte.ts  indexing.svelte.ts  mode.svelte.ts  settings.svelte.ts  spectate.svelte.ts  sync.svelte.ts  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte
payments/: .env.example  README.md  pyproject.toml
payments/src/: __init__.py  main.py
payments/src/routers/: __init__.py  wallet.py
payments/src/services/: __init__.py  wallet.py
pleb-graph/: event_vs_address.md
(+85 files in other folders)
