[project]
name = "reader-agent"
version = "0.0.1"
description = "LangGraph agent for SvelteReader AI chat assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1", "pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent"]

[tool.setuptools.package-dir]
"agent" = "src/agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "E501"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.0",
    "pytest>=8.0.0",
    "ruff>=0.6.1",
]
