[project]
name = "svelte-reader-backend"
version = "0.0.1"
description = "FastAPI backend for SvelteReader - interfaces with LangGraph agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph-sdk>=0.1.36",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "E501"]
