[project]
name = "svelte-reader-backend"
version = "0.0.1"
description = "FastAPI backend for SvelteReader - interfaces with LangGraph agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn[standard]",
    "langgraph-sdk>=0.1.36",
    "python-dotenv",
    "httpx",
    "pydantic",
    "sse-starlette",
    "marshmallow>=3.13,<4.0",
    "cashu>=0.18.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "E501"]
